# gait-gm

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  add_kegg_anno_info.xml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
conda/: meta.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
galaxy/: add_kegg_anno_info.xml  add_kegg_pathway_info.xml  add_pval_flags.xml  all_by_all_correlation.xml  ensembl2symbol.xml  macros.xml  sPLS.xml  split_wide_dataset.xml
galaxy/test-data/: add_flags_gene_flags.tsv  add_flags_gene_output.tsv  ensembl2symbol_annotation_file_01fhl.tsv  geneKeggId2pathwayId.tsv  geneKeggId2pathwayId_01fhl.tsv  gene_annotation_file.tsv  gene_design_file_01fhl.tsv  gene_kegg_pathway.tsv  limma_voom_gene.tsv  limma_voom_metabolite_file_01fhl.tsv  metaboliteKeggId2pathwayId.tsv  metaboliteKeggId2pathwayId_01fhl.tsv  metabolite_annotation_file.tsv  metabolite_input_dataset.tsv  metabolite_kegg_pathway.tsv  metabolite_wide_dataset_01fhl.tsv  pathwayId2pathwayNames.tsv  pathwayId2pathwayNames_01fhl.tsv  spls_correlation.tsv  spls_correlation_file.tabular  spls_correlation_generic_all.tsv
src/: .Rhistory  MANIFEST.in  PCA2GO.2.R  README.md  add_kegg_anno_info.py  add_kegg_pathway_info.py  add_pval_flags.py  all_by_all_correlation.R  all_by_all_correlation.py  ensembl2symbol.py  keggPeaModules.py  pathway_enrichment_analysis.py  sPLS.R  sPLS.py  setup.cfg  split_wide_dataset.py
src/gait-gm/data/: PCA2GO.2.R
src/gaitGM/: keggPeaModules.py
src/gaitGM/data/: all_by_all_correlation.R  sPLS.R
src/scripts/: .all_by_all_correlation.py.swp  add_kegg_anno_info.py  add_kegg_pathway_info.py  add_pval_flags.py  all_by_all_correlation.py  ensembl2symbol.py  keggPeaModules.py  sPLS.py  split_wide_dataset.py
testout/: spls_correlation_generic_all.tsv
testout/add_kegg_anno_info/: gene_link_kegg_annotation_file_01fhl.tsv  metabolite_link_kegg_annotation_file_01fhl.tsv
testout/add_kegg_pathway_info/: kegg_pathway_gene_output.tsv  kegg_pathway_metabolite_output.tsv
testout/add_pval_flags/: add_flags_metabolite_flags_file_01fhl.tsv  add_flags_metabolite_output_file_01fhl.tsv
testout/sPLS_met_generic_gene_all/: spls_correlation_generic_all.tsv
testout/sPLS_met_mmc_gene_pana/: integration_mmc_pana_genes_MMC_output.tsv  integration_mmc_pana_genes_sPLS_output.tsv
testout/split_wide_dataset/: gene_wide_dataset_01fhl.tsv
tests/: .sPLS_met_generic_gene_all.sh.swp  PANA_lite.R  __init__.py  add_kegg_anno_info.sh  add_kegg_pathway_info.sh  add_pval_flags.sh  all.sh  all_by_all_correlation.sh  ensembl2symbol.sh  galaxy.sh  galaxy_sPLS.sh  galaxy_tool.sh  metKeggAnnot  pathway_gene.tsv  sPLS_lzh.sh  sPLS_met_generic_gene_all.sh  sPLS_met_mmc_gene_pana.sh  split_wide_dataset.sh  test_gait_gm.py  wide_genes.tsv
tests/galaxy/: all_tests.sh  rno_geneKeggAnnot  sPLS.sh
tests/galaxy/test-data/: gene_input_dataset_01fhl.tsv  gene_to_keggId_link_01fhl.tsv  metabolite_to_keggId_link_01fhl.tsv
tests/test-output/: ensembl2symbol_annotation_file_01fhl.tsv  kegg_pathway_gene_output.tsv  kegg_pathway_metabolite_output.tsv  metabolite_link_kegg_annotation_file_01fhl.tsv  spls_correlation_file.tsv  spls_correlation_file_01fhl.tsv
