[global]
quiet = 0

[metadata]
name='gait-gm',
version = 21.6.3
description="Modeling Metabolites as a function of gene expression",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/secimTools/gait-gm
author = McIntyre Lab, Universify of Florida
author_email = om@rc.ufl.edu
license = MIT
keywords = modeling metabolites as a function of gene expression
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
setup_requires =
    setuptools
install_requires =
    biopython >= 1.70
    numpy >= 1.18.1
    pandas >= 1.0.3
    secimtools >= 21.6.3

scripts=
    scripts/bwa_split_sam_seonly_2output.py
    scripts/calculate_priors_ase_count_tables.py
    scripts/check_aln_design_file.py
    scripts/check_comparate_design_file.py
    scripts/check_lost_reads.py
    scripts/check_samcomp_lost_reads.py
    scripts/check_sam_present.py
    scripts/combine_count_tables.py
    scripts/gen_headers_after_merge_priors_one_comparate.py
    scripts/merge_comparates_generate_bayesian_headers.py
    scripts/merge_priors_to_comparate.py
    scripts/nbmodel_stan2.py
    scripts/sam_compare_w_feature.py
    scripts/summarize_sam_compare_cnts_table_1cond.py

[aliases]
clean_egg_info = egg_info -Db ""
release = clean_egg_info sdist bdist_wheel
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = pypitest

[sdist]
formats = gztar

[bdist_wheel]
universal=0

[flake8]
max-line-length = 99
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
