[global]
quiet = 0

[metadata]
name= gait-gm
version = 21.6.10
description="Modeling Metabolites as a function of gene expression"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/secimTools/gait-gm
author = McIntyre Lab, Universify of Florida
author_email = om@rc.ufl.edu
license = MIT
keywords = modeling metabolites as a function of gene expression
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
setup_requires =
    setuptools
install_requires =
    biopython >= 1.70
    numpy >= 1.18.1
    pandas >= 1.0.3
    secimtools >= 21.6.3

scripts=
    scripts/add_kegg_anno_info.py
    scripts/add_kegg_pathway_info.py
    scripts/add_pval_flags.py
    scripts/all_by_all_correlation.py
    scripts/ensembl2symbol.py
    scripts/split_wide_dataset.py
    scripts/sPLS.py

[options.package_data]
gaitGM = data/

[aliases]
clean_egg_info = egg_info -Db ""
release = clean_egg_info sdist bdist_wheel
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = pypitest

[sdist]
formats = gztar

[bdist_wheel]
universal=0

[flake8]
max-line-length = 99
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
